--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swiper": "^9.0.5",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
